[project]
name = "quotes2"
version = "2.0.0"
authors = [
    {name = "Shish", email = "shish@shishnet.org"},
]
description = "Quote Database"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask",
    "Flask-SQLAlchemy",
    "gunicorn>=26.0.0",
]

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pytest-cov",
    "prek>=0.4.6",
]

[tool.setuptools]
py-modules = ["quotes2"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --cov-fail-under 95"

[tool.coverage.run]
source = ["quotes2"]

[tool.ruff]
line-length = 88
